Updates order of papers and links for each paper.

--- a/_data/research.yml
+++ b/_data/research.yml
@@ -23,17 +23,16 @@ megaattitude:
   - kim_montague_2021
   - white_frequency_2020
   - gantt_natural_2020
-  - chen_reading_2020
   - an_lexical_2020
   - moon_source_2020
   - white_lexically_2019
   - white_lexicosyntactic_2018
   - white_role_2018
-  - white_question_2018
   - white_computational_2016
 
 supermereo:
   papers:
+  - cao_generating_2024
   - gantt_decomposing_2022
 
 lofi:
